Flatten to root for Vercel static deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "builds": [
-    { "src": "BJ/**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "BJ/$1" }
+    { "src": "index.html", "use": "@vercel/static" }
   ]
 }
