--- a/environment.toml
+++ b/environment.toml
@@ -4,65 +4,49 @@ name = "BJ"
 
 [setup]
 script = """
-Build and refine a high-performance, mobile-first web app for accurately card counting live blackjack sessions on mybookie.ag, and package it with an iOS wrapper for frictionless mobile use.
+Goal: Build and maintain a production-grade blackjack live counting + guidance tool specifically for MyBookie.ag live blackjack sessions.
 
-Core use case:
-- The user is watching/playing a live blackjack table on mybookie.ag and needs to input seen cards in real time.
-- The app must update RC, TC, decks remaining, edge estimate, and recommended bet sizing instantly, with minimal latency and no UI jank.
-- The app must also provide a recommended player action (Hit/Stand/Double/Split) based on the player hand and dealer upcard, using the game rules below.
+Core Requirements
+1) Ruleset fidelity:
+   - 6 decks
+   - Dealer hits soft 17 (H17)
+   - Double after split (DAS)
+   - No surrender
+   - Split limit 1
+   - Split aces receive one card only
+2) Real-time counting:
+   - Running count (RC), true count (TC), decks remaining estimate (auto by cards dealt and optional manual override)
+   - Edge estimate and conservative bet suggestion (units) based on TC
+3) Player guidance:
+   - Always-visible “Recommended Move” based on the above ruleset
+   - Must support pair detection and split logic, and full soft totals (A2–A9) and DAS-aware doubles
+   - Inputs include Player cards, Dealer cards (upcard), and Table cards (other seen cards), all counted into RC/TC
+4) Input UX:
+   - Keyboard-driven and touch-driven
+   - Touch keypad laid out like a phone pad
+   - Tens entered as 'T' (and J/Q/K map to T)
+   - Debounce taps to prevent double-entry
+   - Undo, Next Hand (clears hands only, keeps count), Reset Shoe (clears count + hands), and Target cycling (Player/Dealer/Table)
+5) UI/UX:
+   - Minimal, clean, dark, “sticky” and engaging
+   - Recommendation must be visually dominant and never hidden behind drawers/overlays
+   - Settings drawer must open/close reliably, and Apply/Reset must work
+6) Deployment:
+   - Static deployment on Vercel
+   - No broken IDs between HTML/CSS/JS
 
-Rules and assumptions (MyBookie Live target):
-- 6 decks shoe
-- Dealer hits soft 17 (H17)
-- Double allowed on any first two cards (as implemented in this project)
-- Double after split (DAS)
-- Split aces receive one card only
-- No surrender (unless explicitly added later)
-- Counting must support: Hi-Lo (default), optional Wong Halves, optional Hi-Opt II with optional ace side count
+Deliverables
+- Update index.html, style.css, app.js, and engine.js in sync.
+- Ensure zero console errors and all controls work.
+- Add an iOS wrapper:
+   - Provide a SwiftUI WKWebView wrapper that loads the deployed Vercel URL (or local index.html)
+   - Include minimal navigation, persistent screen-on option guidance, and safe settings for a training utility.
 
-UI/UX requirements:
-- Addictive, minimal, and clean visual hierarchy: TC and recommendation should be visually dominant.
-- Dedicated input lanes: Player, Dealer, Table (other seen/burn cards). The active lane is selectable and clearly indicated.
-- Primary input method is a phone-style keypad:
-  - 'T' for tens (covers 10/J/Q/K)
-  - Layout matches a numeric keypad/phone pad for fast muscle memory
-  - Dedicated tap targets for iOS, plus keyboard shortcuts
-  - Debounce/tap-throttle for accidental double entries (target ~45ms)
-  - Undo must be immediate and correct (reverts RC/TC and removes the last card from the correct lane)
-- Settings drawer must work reliably:
-  - Count system select
-  - TC mode: SIM (from cards dealt) vs CASINO (manual decks remaining estimate)
-  - Bankroll units and max Kelly cap
-  - Hi-Opt II ace side toggle (only visible when relevant)
-
-Computation requirements:
-- Real-time RC/TC updates with stable late-shoe behavior (floor remaining decks to a minimum fraction).
-- Recommendation engine:
-  - Must include pair detection + split logic
-  - Must include soft totals A2–A9
-  - Must include DAS-aware doubles
-  - Provide consistent output: HIT / STAND / DOUBLE / SPLIT
-  - Optional later: deviation mode that overlays TC-based index plays behind a toggle
-
-iOS wrapper requirements:
-- Provide an iOS wrapper so the tool is usable like a native app on iPhone (and optionally iPad).
-- Preferred approach: SwiftUI + WKWebView wrapper pointing to the hosted Vercel URL, with offline fallback to bundled static assets if feasible.
-- Ensure full-screen safe-area layout, no pinch-zoom, and proper handling of keyboard focus.
-- Preserve fast tap input: disable unwanted selection/scroll bounce, ensure buttons remain responsive.
-- Add a simple native shell with:
-  - App icon + launch screen
-  - A single “Reload” control (optional)
-  - Optional haptics on tap/undo/target to reinforce muscle memory
-- Document build/run steps in README_DEPLOY.md (Xcode project creation, bundle identifiers, and deployment notes).
-
-Engineering constraints:
-- Keep the web app static-host friendly (Vercel), no backend required.
-- Prioritize performance: avoid excess DOM churn, prefer incremental updates, and keep event handlers lightweight.
-- Maintain code clarity: single source of truth for rules, defensive DOM bindings, no duplicated render logic.
-
-Deliverables:
-- Update engine.js and app.js to implement accurate recommendations, counting logic, and robust input handling.
-- Update index.html/style.css to match the minimal, premium UI layout and ensure all bound IDs exist.
-- Add an iOS wrapper (SwiftUI + WKWebView) with clear setup instructions and assets placeholders.
-- Provide copy-paste-ready code blocks and a short checklist for verifying correctness in a live session workflow.
+Testing Checklist
+- Enter Player(2) + Dealer(1) and confirm a recommended move appears.
+- Add Table cards and confirm RC/TC/Edge/Bet update.
+- Next Hand clears hands, keeps counts.
+- Reset Shoe clears everything.
+- Settings drawer opens, closes, applies, and persists to localStorage.
+- Tap debounce prevents double entries.
 """
